优化测试文件：支持命令行参数定向测试功能，添加便捷的测试脚本

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "用于管理企业微信的Node.js接口库",
   "main": "lib/main.js",
   "scripts": {
-    "test": "jest ./test/class/Concats/User.test.js"
+    "test": "jest ./test/class/Concats/User.test.js",
+    "test:cli": "node test/main.js"
   },
   "repository": {
     "type": "git",
